--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&display=swap" rel="stylesheet">
-  <title>React App</title>
+  <title>SHOP CLOTHES</title>
 </head>
 
 <body>
